--- a/styles.css
+++ b/styles.css
@@ -16,5 +16,5 @@ p {
   font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
 }
  body {
-   background-color: red;
+   background-color: blue;
  }
